fet: crud pricing and check pricing
