# src/models/pricingModel.js
@@ -1,38 +1,40 @@
-// models/pricingModel.js
 const mongoose = require("mongoose");
 
-const pricingSchema = new mongoose.Schema({
-  organization: {
-    type: mongoose.Schema.Types.ObjectId,
-    ref: "Organization",
-    required: true,
+const pricingSchema = new mongoose.Schema(
+  {
+    organization: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: "Organization",
+      required: true,
+    },
+    item: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: "Item",
+      required: true,
+    },
+    zone: {
+      type: String,
+      required: true,
+    },
+    baseDistanceInKm: {
+      type: Number,
+      required: true,
+    },
+    kmPricePerishable: {
+      type: Number,
+      required: true,
+    },
+    kmPriceNonPerishable: {
+      type: Number,
+      required: true,
+    },
+    fixPrice: {
+      type: Number,
+      required: true,
+    },
   },
-  item: {
-    type: mongoose.Schema.Types.ObjectId,
-    ref: "Item",
-    required: true,
-  },
-  zone: {
-    type: String,
-    required: true,
-  },
-  baseDistanceInKm: {
-    type: Number,
-    required: true,
-  },
-  kmPricePerishable: {
-    type: Number,
-    required: true,
-  },
-  kmPriceNonPerishable: {
-    type: Number,
-    required: true,
-  },
-  fixPrice: {
-    type: Number,
-    required: true,
-  },
-});
+  { strict: false }
+);
 
 const Pricing = mongoose.model("Pricing", pricingSchema);
 
